# Rozum_Pulse_75_ROS

./: .gitmodules  LICENSE  README
..experiments/: rozym test.ipynb
.experiments/: gripper.py  rozym test.ipynb
.experiments/3d model/: (-)Finger_2E_V3_001.STEP.m3d  AG-160-95-W-S_DH-Robotics- (1).a3d.bak  AG-160-95-W-S_DH-Robotics- (1).step:Zone.Identifier  AG95јтТЧДЈРН .STEP.a3d  BLSD.010703.000_ARM75_v2.5.0_Group1^BLSD.010703.000_ARM75_v2.5.0_def_0.m3d  BLSD.010703.000_ARM75_v2.5.0_Group3^BLSD.010703.000_ARM75_v2.5.0_def_0.m3d.bak  BLSD.010703.000_ARM75_v2.5.0_Group4^BLSD.010703.000_ARM75_v2.5.0_def_0.m3d  BLSD.010703.000_ARM75_v2.5.0_Group6^BLSD.010703.000_ARM75_v2.5.0_def_0.m3d  BLSD.010703.000_ARM75_v2.5.0_Group7^BLSD.010703.000_ARM75_v2.5.0_def_0.m3d  BLSD.010703.019 Плита переходная-1^BLSD.010703.000_ARM75_v2.5.0_def_0.m3d  FINGER_ADAPTIVE_LINK_v2_02_01_03_29.STEP.m3d  FINGER_FINGERTIP_v2_02_01_03_29.STEP.m3d  FINGER_PARALLEL_ROB_v2_02_01_03_29.STEP.m3d  FLANGE.STEP.m3d  FLANGE.STEP.step.SLDPRT  base_link.m3d  blsd.010703.000_arm75_v2.5.0 (1).a3d  blsd.010703.000_arm75_v2.5.0 (1).a3d.bak  blsd.010703.000_arm75_v2.5.0 (1).step:Zone.Identifier  hexagon socket head cap screws gb_GB_FASTENER_SCREWS_HSHCS M4X6-N.m3d  robot_no_gripper.a3d.bak
Kompas 3D model/: (-)FINGER_CRANK_V3_29.STEP.m3d  A1.STEP.m3d  AG-160-95-W-S_DH-Robotics- (1).a3d.bak  BLSD.010703.000_ARM75_v2.5.0_Group3^BLSD.010703.000_ARM75_v2.5.0_def_0.m3d.bak  BLSD.010703.000_ARM75_v2.5.0_Group4^BLSD.010703.000_ARM75_v2.5.0_def_0.m3d  BLSD.010703.000_ARM75_v2.5.0_Group4^BLSD.010703.000_ARM75_v2.5.0_def_0.m3d.bak  hexagon socket head cap screws gb_GB_FASTENER_SCREWS_HSHCS M3X5-N.STEP.m3d
aruco_pose_estimation/aruco_pose_estimation/: pose_estimation.py
aruco_pose_estimation/config/: aruco_parameters.yaml
aruco_pose_estimation/rviz/: cam_detect.rviz
aruco_pose_estimation/scripts/: aruco_node.py
experiments/: kubic1.py
experiments/3d model/: AG-160-95-W-S_DH-Robotics- (1).a3d  BLSD.010703.000_ARM75_v2.5.0_Group2^BLSD.010703.000_ARM75_v2.5.0_def_0.m3d  BLSD.010703.000_ARM75_v2.5.0_Group3^BLSD.010703.000_ARM75_v2.5.0_def_0.m3d  BLSD.010703.000_ARM75_v2.5.0_Group5^BLSD.010703.000_ARM75_v2.5.0_def_0.m3d  FINGER_DISTAL_PHALANX_v2_02_01_07_07.step.STEP.m3d  FINGER_PROXIMAL_PHALANX_V3_29.STEP.m3d  base_plate.m3d  robot_no_gripper.SLDASM  robot_no_gripper.a3d  robot_no_gripper.x_t  Пъ.m3d
moveit/: .setup_assistant  package.xml
moveit/config/: initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  rozum_pulse_75.srdf
moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
moveit/urdf/: ag95.xacro  rozum_pulse_75.urdf
qqrozum_moveit_config/: .setup_assistant  package.xml
qqrozum_moveit_config/config/: initial_positions.yaml  (+3 more)
robot_moveit_config/: .setup_assistant  package.xml
ros_solid/: CMakeLists.txt  package.xml
ros_solid/launch/: display.launch  display.py  gazebo.launch
ros_solid/meshes/: base_link.STL  link1.STL  link3.STL  link5.STL
ros_solid/urdf/: 1ros_solid.csv  1ros_solid.urdf  DH_to_urdf.ipynb  ag95.xacro  ag95_gazebo.xacro  ag95_macro.xacro  ag95_transmissions.xacro  ros_solid copy 2.urdf  ros_solid copy 3.urdf  ros_solid copy.urdf  ros_solid.csv  ros_solid.urdf
rozum_moveit/: .setup_assistant  CMakeLists.txt  package.xml
rozum_moveit_config/: CMakeLists.txt
rozum_pulse_75/: CMakeLists.txt  package.xml
rozum_pulse_75_bringup/: CMakeLists.txt  package.xml
rozum_pulse_75_bringup/config/: controllers.yaml
rozum_pulse_75_bringup/launch/: bringup.launch.py
rozum_pulse_75_hardware/: CMakeLists.txt  package.xml  plugins.xml
rozum_pulse_75_hardware/include/rozum_pulse_75_hardware/: rozum_system.hpp
rozum_pulse_75_hardware/src/: rozum_system.cpp
(+88 files in other folders)
