<?xml version="1.0"?>
<package format="3">
  <name>rozum_pulse_75_bringup</name>
  <version>0.0.1</version>
  <description>Bringup for Rozum Pulse 75 with ros2_control</description>

  <maintainer email="test@test.com">Test</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

 
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

 
  <exec_depend>rozum_pulse_75</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>