<?xml version="1.0"?>
<package format="3">
  <name>rozum_pulse_75_hardware</name>
  <version>0.0.1</version>
  <description>ROS2 Control hardware interface for Rozum Pulse 75 (read-only)</description>

  <maintainer email="test@test.com">Test</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rapidjson</depend>
  <depend>curl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>